fix: Update email

--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,11 @@
       "dest": "frontend/$1"
     }
   ],
+  "functions": {
+    "backend/vercel-server.js": {
+      "maxDuration": 30
+    }
+  },
   "env": {
     "NODE_ENV": "production"
   }
