--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
-    "pdfkit": "^0.17.1"
+    "pdfkit": "^0.17.1",
+    "cloudinary": "^1.41.0"
   }
 }
