--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
@@ -29,7 +30,6 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
-    "pdfkit": "^0.17.1",
-    "cloudinary": "^1.41.0"
+    "pdfkit": "^0.17.1"
   }
 }
