--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,26 +2,27 @@
   "version": 2,
   "builds": [
     {
-      "src": "vercel-server.js",
+      "src": "backend/vercel-server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/vercel-server.js"
+      "dest": "backend/vercel-server.js"
     },
     {
       "src": "/uploads/(.*)",
-      "dest": "/vercel-server.js"
+      "dest": "backend/vercel-server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "backend/vercel-server.js"
     }
   ],
   "functions": {
-    "vercel-server.js": {
+    "backend/vercel-server.js": {
       "maxDuration": 30
     }
-  },
-  "env": {
-    "NODE_ENV": "production"
   }
 }
