--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "communitylink",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node start-production.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "build": "echo 'No build step required for Node.js backend'",
     "postinstall": "echo 'Backend dependencies installed successfully'"
@@ -20,7 +20,6 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
-
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
