--- a/vercel.json
+++ b/vercel.json
@@ -9,31 +9,18 @@
       }
     },
     {
-      "src": "backend/vercel-server.js",
+      "src": "backend/vercel-minimal.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/files/(.*)",
-      "dest": "backend/vercel-server.js"
-    },
-    {
-      "src": "/api/uploads/(.*)",
-      "dest": "backend/vercel-server.js"
-    },
-    {
       "src": "/api/(.*)",
-      "dest": "backend/vercel-server.js"
+      "dest": "/backend/vercel-minimal.js"
     },
     {
       "src": "/(.*)",
-      "dest": "frontend/$1"
+      "dest": "/frontend/$1"
     }
-  ],
-  "functions": {
-    "backend/vercel-server.js": {
-      "maxDuration": 30
-    }
-  }
+  ]
 }
