--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "communitylink",
   "version": "1.0.0",
-  "main": "vercel-minimal.js",
+  "main": "vercel-server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
