--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,22 @@
       "dest": "/backend/vercel-server.js"
     },
     {
+      "src": "/verify-email/(.*)",
+      "dest": "/frontend/index.html"
+    },
+    {
+      "src": "/reset-password/(.*)",
+      "dest": "/frontend/index.html"
+    },
+    {
+      "src": "/events/register/(.*)",
+      "dest": "/frontend/index.html"
+    },
+    {
+      "src": "/events/(.*)",
+      "dest": "/frontend/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/frontend/$1"
     }
