--- a/vercel.json
+++ b/vercel.json
@@ -19,8 +19,16 @@
       "dest": "/backend/vercel-server.js"
     },
     {
+      "src": "/uploads/(.*)",
+      "dest": "/backend/vercel-server.js"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot))",
+      "dest": "/frontend/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "/frontend/index.html"
     }
   ]
 }
