--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set \"CI=false\" && set \"GENERATE_SOURCEMAP=false\" && set \"DISABLE_ESLINT_PLUGIN=true\" && react-scripts build",
-    "build:prod": "set \"CI=false\" && set \"GENERATE_SOURCEMAP=false\" && set \"DISABLE_ESLINT_PLUGIN=true\" && react-scripts build",
-    "build:vercel": "set \"CI=false\" && set \"GENERATE_SOURCEMAP=false\" && set \"DISABLE_ESLINT_PLUGIN=true\" && set \"SKIP_PREFLIGHT_CHECK=true\" && react-scripts build",
+    "build": "react-scripts build",
+    "build:prod": "react-scripts build",
+    "build:vercel": "react-scripts build",
     "build:render": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
