--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:prod": "react-scripts build",
-    "build:vercel": "react-scripts build",
+    "build": "cross-env CI=false react-scripts build",
+    "build:prod": "cross-env CI=false react-scripts build",
+    "build:vercel": "cross-env CI=false react-scripts build",
     "build:render": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -56,5 +56,8 @@
     "react-dom": "18.2.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "cross-env": "^10.0.0"
   }
 }
