--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "cross-env CI=false react-scripts build",
-    "build:prod": "cross-env CI=false react-scripts build",
-    "build:vercel": "cross-env CI=false react-scripts build",
+    "build": "react-scripts build",
+    "build:prod": "react-scripts build",
+    "build:vercel": "react-scripts build",
     "build:render": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
