--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,8 @@
     "@types/react-dom": "18.2.0"
   },
   "devDependencies": {
-    "cross-env": "^10.0.0"
+    "cross-env": "^10.0.0",
+    "react-app-rewired": "^2.2.1",
+    "customize-cra": "^1.0.0"
   }
 }
