--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,13 +23,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:prod": "react-scripts build",
-    "build:vercel": "react-scripts build",
-    "vercel-build": "react-scripts build",
-    "build:render": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "build:prod": "react-app-rewired build",
+    "build:vercel": "react-app-rewired build",
+    "vercel-build": "node build-vercel.js",
+    "build:render": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build:render",
     "deploy": "echo 'Build completed successfully for Render'"
