--- a/vercel.json
+++ b/vercel.json
@@ -2,25 +2,37 @@
   "version": 2,
   "builds": [
     {
+      "src": "backend/vercel-server.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "build"
       }
-    },
-    {
-      "src": "backend/vercel-server.js",
-      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "src": "/api/test",
+      "dest": "backend/test-function.js"
+    },
+    {
       "src": "/api/(.*)",
-      "dest": "/backend/vercel-server.js"
+      "dest": "backend/vercel-server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/$1"
+      "dest": "frontend/$1"
     }
-  ]
+  ],
+  "functions": {
+    "backend/vercel-server.js": {
+      "maxDuration": 30
+    }
+  },
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
