--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "communitylink",
   "version": "1.0.0",
-  "main": "vercel-server.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node server-simple.js",
     "vercel-build": "echo 'Vercel build completed'",
     "dev": "nodemon server.js",
     "build": "echo 'No build step required for Node.js backend'",
