--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: charism-api
     env: node
     buildCommand: npm install
-    startCommand: node server.js
+    startCommand: node server-simple.js
     envVars:
       - key: NODE_ENV
         value: production
