Fix Render deployment with rootDir backend

--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,9 @@ services:
   - type: web
     name: charism-api
     env: node
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && node server.js
+    buildCommand: npm install
+    startCommand: node server.js
+    rootDir: backend
     envVars:
       - key: NODE_ENV
         value: production
