--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.1"
+  },
+  "devDependencies": {
+    "puppeteer": "^24.22.3"
   }
 }
