--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
@@ -30,6 +31,7 @@
     "mongoose": "^8.16.4",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-cache": "^5.1.2",
     "nodemailer": "^7.0.5",
     "pdfkit": "^0.17.1"
   }
