CLEANUP: Remove duplicates, organize structure, add security and documentation

--- a/backend/env.template
+++ b/backend/env.template
@@ -1,31 +1,33 @@
-# Environment Variables Template
+# BACKEND ENVIRONMENT VARIABLES TEMPLATE
 # Copy this file to .env and fill in your actual values
+# DO NOT COMMIT .env TO GITHUB - IT'S IN .gitignore
 
 # Database Configuration
 MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/database?retryWrites=true&w=majority
-# Replace with your actual MongoDB Atlas connection string
 
 # JWT Configuration
-JWT_SECRET=your-super-secure-jwt-secret-key-here-make-it-long-and-random
+JWT_SECRET=your-super-secure-jwt-secret-key-here
+JWT_EXPIRES_IN=24h
 
 # Server Configuration
-NODE_ENV=development
 PORT=10000
-FRONTEND_URL=http://localhost:3000
-BACKEND_URL=http://localhost:10000
+NODE_ENV=development
 
-# CORS Configuration
-CORS_ORIGINS=http://localhost:3000,http://localhost:10000
+# Frontend URL (for CORS and email links)
+FRONTEND_URL=http://localhost:3000
 
 # Email Configuration
 EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password-here
+EMAIL_PASS=your-app-password
 EMAIL_SERVICE=gmail
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-NO_REPLY_EMAIL=noreply@yourdomain.com
 
 # File Upload Configuration
 MAX_FILE_SIZE=5242880
 UPLOAD_PATH=./uploads
+
+# Security
 BCRYPT_ROUNDS=12
+CORS_ORIGINS=http://localhost:3000,http://localhost:10000
+ENABLE_AI_FILTERING=true
