--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,16 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment variables
+# Environment variables - CRITICAL SECURITY
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+local.env
+backend/.env
+frontend/.env
+**/.env
 
 # Build outputs
 build/
