--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     buildCommand: cd backend && npm install
     startCommand: cd backend && node server.js
     rootDir: backend
+    plan: free
     envVars:
       - key: NODE_ENV
         value: production
@@ -30,18 +31,23 @@ services:
         value: smtp.gmail.com
       - key: EMAIL_PORT
         value: 587
+      - key: NO_REPLY_EMAIL
+        value: ${NO_REPLY_EMAIL}
       - key: MAX_FILE_SIZE
         value: 5242880
       - key: UPLOAD_PATH
         value: ./uploads
       - key: BCRYPT_ROUNDS
         value: 12
+      - key: ENABLE_AI_FILTERING
+        value: true
 
   - type: static
     name: charism
     env: static
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: frontend/build
+    plan: free
     envVars:
       - key: REACT_APP_API_URL
         value: https://charism-api-xtw9.onrender.com/api
