--- a/render.yaml
+++ b/render.yaml
@@ -46,7 +46,7 @@ services:
     name: charism
     env: static
     buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: frontend/build
+    staticPublishPath: build
     plan: free
     envVars:
       - key: REACT_APP_API_URL
