--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,5 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -31,7 +30,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build:render",
-    "deploy": "echo 'Build completed successfully for Render'"
+    "deploy": "echo 'Build completed successfully for Render'",
+    "serve": "node server.js",
+    "start:prod": "npm run build && npm run serve"
   },
   "eslintConfig": {
     "extends": [
