--- a/render.yaml
+++ b/render.yaml
@@ -9,6 +9,8 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 5000
       - key: MONGO_URI
         fromDatabase:
           name: charism-db
@@ -32,6 +34,8 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 3000
       - key: REACT_APP_API_URL
         value: https://charism-api-xtw9.onrender.com/api
 
