--- a/render.yaml
+++ b/render.yaml
@@ -37,7 +37,7 @@ services:
       - key: PORT
         value: 3000
       - key: REACT_APP_API_URL
-        value: https://charism-api-xtw9.onrender.com/api
+        value: https://charism-api-xtw9.onrender.com
 
 databases:
   - name: charism-db
